fixed the gap

--- a/css/queries.css
+++ b/css/queries.css
@@ -127,7 +127,7 @@
     /* flex-direction: column; */
   }
 
-  .list-item{
+  .main-nav-list .list-item{
     margin-bottom: 4rem;
   }
   /* munu end */
